Add jquery-cvs library to parse CVS files

--- a/django/applications/catmaid/templates/catmaid/index.html
+++ b/django/applications/catmaid/templates/catmaid/index.html
@@ -57,6 +57,7 @@
 		<script type="text/javascript" src="{{ STATIC_URL }}libs/jquery/growlAlert.plugin.js"></script>
 		<script type="text/javascript" src="{{ STATIC_URL }}libs/jquery/jquery.blockUI.js"></script>
 		<script type="text/javascript" src="{{ STATIC_URL }}libs/jquery/jquery.dd.js"></script>
+		<script type="text/javascript" src="{{ STATIC_URL }}libs/jquery/jquery.csv-0.71.js"></script>
 		<script type="text/javascript" src="{{ STATIC_URL }}libs/fabric.js/all.modified.js"></script>
 		<script type="text/javascript" src="{{ STATIC_URL }}tools.js"></script>
 		<script type="text/javascript" src="{{ STATIC_URL }}widgets/console.js"></script>
