3D viewer: display statistics

--- a/django/applications/catmaid/templates/catmaid/index.html
+++ b/django/applications/catmaid/templates/catmaid/index.html
@@ -130,6 +130,7 @@
 		<script type="text/javascript" src="{{ STATIC_URL }}libs/three.js/helvetiker_regular.typeface.js"></script>
 		<script type="text/javascript" src="{{ STATIC_URL }}libs/threex/THREEx.FullScreen.js"></script>
 		<script type="text/javascript" src="{{ STATIC_URL }}libs/threex/THREEx.WindowResize.js"></script>
+		<script type="text/javascript" src="{{ STATIC_URL }}libs/statsjs/stats.js"></script>
 		<script type="text/javascript" src="{{ STATIC_URL }}webglapp.js"></script>
 		<script type="text/javascript" src="{{ STATIC_URL }}WindowMaker.js"></script>
 		<script type="text/javascript" src="{{ STATIC_URL }}widgets/windowmanager.js"></script>
