--- a/django/applications/catmaid/templates/catmaid/index.html
+++ b/django/applications/catmaid/templates/catmaid/index.html
@@ -153,6 +153,7 @@
 		<script type="text/javascript" src="{{ STATIC_URL }}widgets/neuron_navigator.js"></script>
 		<script type="text/javascript" src="{{ STATIC_URL }}layers/gridlayer.js"></script>
 		<script type="text/javascript" src="{{ STATIC_URL }}widgets/ilastik_tools.js"></script>
+		<script type="text/javascript" src="{{ STATIC_URL }}layers/ilastik_layer.js"></script>
 	</head>
 	<body onload="realInit();"><a></a>
 		<div id="growl-alert" class="growl-message" style="display: none"></div>
