Added gapjunctions to connectivity widget.

--- a/django/applications/catmaid/static/css/screen.css
+++ b/django/applications/catmaid/static/css/screen.css
@@ -488,7 +488,8 @@ div#classification_graph_object img.roiimage {
 }
 
 .connectivity_widget .header th:nth-child(4),
-.connectivity_widget .header th:nth-child(5) {
+.connectivity_widget .header th:nth-child(5),
+.connectivity_widget .header th:nth-child(6) {
   width: 7em;
 }
 
@@ -513,6 +514,9 @@ div#classification_graph_object img.roiimage {
   width: 50%;
   vertical-align: top;
 }
+.connectivity_widget .table_container_half.gapjunction_visible {
+  width: 33%;
+}
 
 .connectivity_widget .table_container_wide {
   width: 100%;
@@ -521,6 +525,10 @@ div#classification_graph_object img.roiimage {
 
 .connectivity_widget .table_container_wide:last-child {
   margin-bottom: 0;
+}
+
+.connectivity_widget .table_container_hidden {
+  display: none;
 }
 
 .connectivity_widget .content {
